fixed few issues with alignment

--- a/src/index.css
+++ b/src/index.css
@@ -24,15 +24,13 @@ code {
 }
 
 .container {
-  /* min-height: 100vh; */
+  min-height: 100vh;
 }
 
 .content {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 786px;
-  margin-top: 75px;
 }
 
 span {
