--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,13 +1,14 @@
 .brief-card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    margin: 1rem;
-    /* border: 1px solid #fff; */
+    position: relative;
+    height: 750px;
+    width: 750px;
 }
 
 .brief-card-info {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 600px;
 }
 
